# tinyt_agentic

./: README.md
tinytroupe_agentic/: .env.example  .gitignore  .replit  DEPLOYMENT.md  Dockerfile  FEATURES.md  IMPROVEMENTS.md  NEW_FEATURES_DEMO.md  README.md  main.py  pyproject.toml  requirements.txt  run.sh
tinytroupe_agentic/agents/: custom_summary_generator.py  discussion_framework_agent.py  discussion_moderator.py  persona_generator.py  qa_assistant.py  summary_generator.py
tinytroupe_agentic/core/: agentic_coordinator.py  config.py  llm_client.py  session_manager.py  tinytroupe_integration.py
tinytroupe_agentic/static/css/: style.css
tinytroupe_agentic/static/js/: app.js
tinytroupe_agentic/templates/: index.html
