[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-focus-group"
version = "1.0.0"
description = "Complete end-to-end agentic system for automated focus group discussions"
authors = [{name = "AI Assistant"}]
license = {text = "MIT"}
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-multipart==0.0.6",
    "jinja2==3.1.2",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "aiofiles==23.2.1",
    "openai==1.3.0",
    "requests==2.31.0"
]

[project.scripts]
start = "main:app"